--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./fonts/Inter-VariableFont_slnt\,wght.ttf");
+  src: url("./fonts/Inter-VariableFont_slnt,wght.ttf");
 }
 
 @layer base {
